# financial-transaction-fraud-detection

./: .gitignore  README.md  main.py  pyproject.toml  ~$🚀 02.docx  🚀 02.docx
notebooks/: 01_data_overview.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
src/models/: log_reg_baseline_model.joblib  log_reg_cost_sensitive.joblib  log_reg_cost_sensitive_2.joblib  xgb_clf_baseline_model.joblib  xgb_clf_cost_sensitive.joblib  xgb_clf_cost_sensitive_2.joblib
