[project]
name = "financial-transaction-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyterlab>=4.5.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
